--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,3 +11,8 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+<script
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCdNjPOM_CirNn42mLR18gouaL8-if6Xfo&libraries=places"
+  async
+  defer
+  ></script>
